fix: unify gap betwwen vid title and portfolio cards

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -182,15 +182,11 @@
   }
 
   .portfolio-card-title--cs-diacritics {
-    line-height: 1.18;
-  }
-
-  .portfolio-card-subtitle {
-    margin-top: 0;
+    line-height: 1.12;
   }
 
   .portfolio-card-title--cs-diacritics + .portfolio-card-subtitle {
-    margin-top: 0.95rem;
+    margin-top: 0;
   }
 
   @media (min-width: 768px) {
@@ -198,12 +194,8 @@
       line-height: 1.16;
     }
 
-    .portfolio-card-subtitle {
-      margin-top: 0;
-    }
-
     .portfolio-card-title--cs-diacritics + .portfolio-card-subtitle {
-      margin-top: 1.1rem;
+      margin-top: 0;
     }
   }
 
